HPC-9065: Fix z-index issue for section menu dropdowns

--- a/html/themes/custom/common_design_subtheme/sass/ghi/components/_entity-navigation.scss
+++ b/html/themes/custom/common_design_subtheme/sass/ghi/components/_entity-navigation.scss
@@ -80,7 +80,7 @@ ul.links--entity-navigation {
 
       &.dropdown > div[data-cd-hidden=false] {
         position: absolute;
-        z-index: z-index(default);
+        z-index: 2;
         top: 3.5rem;
         left: -1.5rem;
         display: flex;
@@ -91,7 +91,7 @@ ul.links--entity-navigation {
 
       &.megamenu > div[data-cd-hidden=false] {
         position: absolute;
-        z-index: z-index(default);
+        z-index: 2;
         top: 3.5rem;
         right: 0;
         left: 0;
